[SELC-5680] Refactor API to verify csv for SEND
