# apps/onboarding-ms/src/main/docs/openapi.yaml
@@ -43,40 +43,6 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/VerifiyAggregateResponseInterfaceAggregateAppIo"
-        "401":
-          description: Not Authorized
-        "403":
-          description: Not Allowed
-      security:
-      - SecurityScheme: []
-  /v1/aggregates/verification/prod-pagopa:
-    post:
-      tags:
-      - Aggregates Controller
-      summary: Validate the data related to the aggregated entities present in a CSV
-        file
-      description: Validates aggregated entity data specific to the PROD-Pagopa environment
-        by processing the provided CSV file. This ensures that all entries meet the
-        required criteria before further processing.
-      operationId: verifyPagoPaAggregatesCsv
-      requestBody:
-        content:
-          multipart/form-data:
-            schema:
-              required:
-              - aggregates
-              type: object
-              properties:
-                aggregates:
-                  format: binary
-                  type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
                 $ref: "#/components/schemas/VerifyAggregateResponse"
         "401":
           description: Not Authorized
@@ -111,7 +77,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/VerifyAggregateSendResponse"
+                $ref: "#/components/schemas/VerifyAggregateResponse"
         "401":
           description: Not Authorized
         "403":
@@ -1058,7 +1024,7 @@ components:
           type: string
         otherNote:
           type: string
-    AggregateAppIo:
+    Aggregate:
       type: object
       properties:
         subunitCode:
@@ -1067,6 +1033,12 @@ components:
           type: string
         description:
           type: string
+        codeSDI:
+          type: string
+        users:
+          type: array
+          items:
+            $ref: "#/components/schemas/AggregateUser"
         digitalAddress:
           type: string
         taxCode:
@@ -1120,33 +1092,6 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/UserRequest"
-    AggregateSend:
-      type: object
-      properties:
-        description:
-          type: string
-        pec:
-          type: string
-        taxCode:
-          type: string
-        vatNumber:
-          type: string
-        codeSDI:
-          type: string
-        address:
-          type: string
-        city:
-          type: string
-        province:
-          type: string
-        subunitType:
-          type: string
-        subunitCode:
-          type: string
-        users:
-          type: array
-          items:
-            $ref: "#/components/schemas/AggregateUser"
     AggregateUser:
       type: object
       properties:
@@ -1157,8 +1102,6 @@ components:
         taxCode:
           type: string
         email:
-          type: string
-        role:
           type: string
     BillingPaRequest:
       type: object
@@ -1189,15 +1132,6 @@ components:
           type: string
         publicServices:
           type: boolean
-    DataProtectionOfficer:
-      type: object
-      properties:
-        address:
-          type: string
-        email:
-          type: string
-        pec:
-          type: string
     DataProtectionOfficerRequest:
       type: object
       properties:
@@ -1220,61 +1154,6 @@ components:
         code:
           type: string
         desc:
-          type: string
-    Institution:
-      type: object
-      properties:
-        id:
-          type: string
-        institutionType:
-          $ref: "#/components/schemas/InstitutionType"
-        taxCode:
-          type: string
-        subunitCode:
-          type: string
-        subunitType:
-          $ref: "#/components/schemas/InstitutionPaSubunitType"
-        origin:
-          $ref: "#/components/schemas/Origin"
-        originId:
-          type: string
-        city:
-          type: string
-        country:
-          type: string
-        county:
-          type: string
-        istatCode:
-          type: string
-        description:
-          type: string
-        digitalAddress:
-          type: string
-        address:
-          type: string
-        zipCode:
-          type: string
-        geographicTaxonomies:
-          type: array
-          items:
-            $ref: "#/components/schemas/GeographicTaxonomy"
-        rea:
-          type: string
-        shareCapital:
-          type: string
-        businessRegisterPlace:
-          type: string
-        supportEmail:
-          type: string
-        supportPhone:
-          type: string
-        imported:
-          type: boolean
-        paymentServiceProvider:
-          $ref: "#/components/schemas/PaymentServiceProvider"
-        dataProtectionOfficer:
-          $ref: "#/components/schemas/DataProtectionOfficer"
-        parentDescription:
           type: string
     InstitutionBaseRequest:
       required:
@@ -1808,19 +1687,6 @@ components:
       - OPERATOR
       - ADMIN_EA
       type: string
-    PaymentServiceProvider:
-      type: object
-      properties:
-        abiCode:
-          type: string
-        businessRegisterNumber:
-          type: string
-        legalRegisterNumber:
-          type: string
-        legalRegisterName:
-          type: string
-        vatNumberGroup:
-          type: boolean
     PaymentServiceProviderRequest:
       type: object
       properties:
@@ -1929,35 +1795,13 @@ components:
           $ref: "#/components/schemas/PartyRole"
         productRole:
           type: string
-    VerifiyAggregateResponseInterfaceAggregateAppIo:
-      type: object
-      properties:
-        aggregates:
-          type: array
-          items:
-            $ref: "#/components/schemas/AggregateAppIo"
-        errors:
-          type: array
-          items:
-            $ref: "#/components/schemas/RowError"
     VerifyAggregateResponse:
       type: object
       properties:
         aggregates:
           type: array
           items:
-            $ref: "#/components/schemas/Institution"
-        errors:
-          type: array
-          items:
-            $ref: "#/components/schemas/RowError"
-    VerifyAggregateSendResponse:
-      type: object
-      properties:
-        aggregates:
-          type: array
-          items:
-            $ref: "#/components/schemas/AggregateSend"
+            $ref: "#/components/schemas/Aggregate"
         errors:
           type: array
           items:
