# apps/onboarding-ms/src/main/java/it/pagopa/selfcare/onboarding/model/VerifiyAggregateResponseInterface.java
@@ -1,14 +1,0 @@
-package it.pagopa.selfcare.onboarding.model;
-
-import lombok.Data;
-
-import java.util.ArrayList;
-import java.util.List;
-
-@Data
-public class VerifiyAggregateResponseInterface<T> {
-    private List<T> aggregates = new ArrayList<>();
-    private List<RowError> errors = new ArrayList<>();
-
-
-}
