# apps/onboarding-ms/src/main/java/it/pagopa/selfcare/onboarding/model/VerifyAggregateAppIoResponse.java
@@ -1,7 +1,0 @@
-package it.pagopa.selfcare.onboarding.model;
-
-import lombok.EqualsAndHashCode;
-@EqualsAndHashCode(callSuper = true)
-public class VerifyAggregateAppIoResponse extends VerifiyAggregateResponseInterface<AggregateAppIo> {
-
-}
